// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="Container-sc-1ltt7k8-0 hcwoPx"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 kjDrDt"
      dir="ltr"
      placeholder="Country"
    />
  </div>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 eKhgR"
      dir="ltr"
      placeholder="Phone"
    />
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="Container-sc-1ltt7k8-0 hcwoPx"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 larYwV"
      dir="rtl"
      placeholder="Country"
    />
  </div>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 cFxnZN"
      dir="rtl"
      placeholder="Phone"
    />
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values 1`] = `
<div
  className="flex flex-col gap-3"
>
  <div
    className="Container-sc-1ltt7k8-0 hcwoPx"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 kjDrDt"
        dir="ltr"
        placeholder="Country"
      />
    </div>
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 eKhgR"
        dir="ltr"
        placeholder="Phone"
      />
    </div>
  </div>
  <div>
    <span
      className="LabelContainer-eoxl68-0 bsvMoR"
      size="medium"
    >
      Country: 
      Estonia
    </span>
  </div>
  <div>
    <span
      className="LabelContainer-eoxl68-0 bsvMoR"
      size="medium"
    >
      Phone: 
      +372 45678901
    </span>
  </div>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="Container-sc-1ltt7k8-0 hcwoPx"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 kjDrDt"
      dir="ltr"
      placeholder="Email"
      type="email"
    />
  </div>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <div
      className="Inner-sc-1soq84i-0 PghWO"
    >
      <input
        className="Input-qkdgvx-0 dsMwXt"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <div
        className="ShowPassword-sc-147a7th-0 evoMbN"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div>
    <div
      className="Container-sc-1ltt7k8-0 hcwoPx"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <input
          className="Input-qkdgvx-0 kjDrDt"
          dir="ltr"
          placeholder="Country"
        />
      </div>
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <input
          className="Input-qkdgvx-0 eKhgR"
          dir="ltr"
          placeholder="Phone"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="Container-sc-1ltt7k8-0 hcwoPx"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <input
          className="Input-qkdgvx-0 iBiNFC"
          dir="ltr"
          placeholder="Country"
        />
      </div>
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <input
          className="Input-qkdgvx-0 ccQrwK"
          dir="ltr"
          placeholder="Phone"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="Container-sc-1ltt7k8-0 hcwoPx"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <div
          className="Inner-sc-1soq84i-0 XqqD"
        >
          <input
            className="Input-qkdgvx-0 jpvmtN"
            dir="ltr"
            placeholder="Country"
          />
          <label
            className="LabelInner-vrrjt0-0 foFqgl"
          />
        </div>
      </div>
      <div
        className="Container-sc-1f49upb-0 fVKDpE"
      >
        <div
          className="Inner-sc-1soq84i-0 XqqD"
        >
          <input
            className="Input-qkdgvx-0 kskBtR"
            dir="ltr"
            placeholder="Phone"
          />
          <label
            className="LabelInner-vrrjt0-0 foFqgl"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="Container-sc-1ltt7k8-0 fgSuYV"
  dir="ltr"
  orientation="vertical"
>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 idvNjJ"
      dir="ltr"
      placeholder="Country"
    />
  </div>
  <div
    className="Container-sc-1f49upb-0 fVKDpE"
  >
    <input
      className="Input-qkdgvx-0 kusVSZ"
      dir="ltr"
      placeholder="Phone"
    />
  </div>
</div>
`;
